--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
     <slf4j.version>1.7.36</slf4j.version>
     <logback.version>1.3.12</logback.version>
 
-    <junit5.version>5.9.1</junit5.version>
     <wdm.version>5.2.3</wdm.version>
 
     <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
@@ -42,7 +41,11 @@
       <scope>test</scope>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <artifactId>kotlinx-coroutines-core</artifactId>
+      <version>1.6.0</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -58,12 +61,6 @@
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
       <version>${selenium.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit5.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
