--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <version>${kotlin.version}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.github.javafaker</groupId>
+          <artifactId>javafaker</artifactId>
+          <version>1.0.2</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
