--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
           <version>1.0.2</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>com.aventstack</groupId>
+          <artifactId>extentreports</artifactId>
+          <version>5.1.1</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
