--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,18 @@
           <version>5.1.1</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>xalan</groupId>
+          <artifactId>xalan</artifactId>
+          <version>2.7.2</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-jasper</artifactId>
+      <version>7.0.70</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
